# legacy-protocol

./: .gitattributes  .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json  vercel.json
app/: next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
cloak-integration/: package-lock.json  package.json  tsconfig.json
docs/: ARCHITECTURE.md  BENEFICIARY_GUIDE.md  CHANGELOG.md  CLOAK_INTEGRATION.md  DEPLOYMENT.md  ERRORS.md  EVENTS.md  GUARDIAN_GUIDE.md  MATH.md  OWNER_GUIDE.md  PROGRAM.md  RELAYER.md  SDK.md  SECURITY.md  WATCHER.md
guardian-app/: App.tsx  Guardian-1.0.3.apk  app.json  eas.json  index.html  metro.config.js  migrate.js  next.config.js  package-lock.json  package.json  start.sh  toggle-mode.sh  tsconfig.json  vite.config.ts
guardian-app/src-tauri/: Cargo.toml  tauri.conf.json
guardian-app/src-tauri/binaries/: qvac-sidecar-x86_64-unknown-linux-gnu  signing-service-aarch64-linux-android  signing-service-x86_64-unknown-linux-gnu
guardian-app/src-tauri/capabilities/: default.json
guardian-app/src-tauri/src/: lib.rs  main.rs
idl/: legacy_vault.json
programs/legacy_vault/: Cargo.toml
programs/legacy_vault/src/: constants.rs  errors.rs  lib.rs
programs/legacy_vault/src/instructions/: add_guardian.rs  anomaly_flag.rs  check_in.rs  claim_inheritance.rs  close_orphaned_covenant.rs  close_vault.rs  configure_threshold.rs  create_covenant.rs  deposit.rs  emergency_sweep.rs  execute_covenant.rs  guardian_sign.rs  initialize_vault.rs  mod.rs  record_cloak_claim.rs  record_cloak_deposit.rs  remove_guardian.rs  trigger_inheritance.rs
programs/legacy_vault/src/math/: activity_score.rs  mod.rs  threshold_calc.rs
programs/legacy_vault/src/state/: activity.rs  covenant.rs  guardian.rs  mod.rs  vault.rs
qvac-sidecar/: index.js  package-lock.json  package.json  qvac.config.json
relayer/: .env.example  package-lock.json  package.json  tsconfig.json
(+193 files in other folders)
