[package]
name    = "legacy_vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl        = []
no-log-ix-name = []
cpi           = ["no-entrypoint"]
default       = []

[dependencies]
anchor-lang = { workspace = true }

[dev-dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
